Fix portfolio items: make content always visible, adjust colors and layout

--- a/assets/css/johndoe.css
+++ b/assets/css/johndoe.css
@@ -11215,22 +11215,24 @@ p {
   padding-left: 0;
   padding-right: 0;
   margin: 10px -5px;
-  overflow: hidden;
+  overflow: visible;
   border-radius: 2px;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
+  width: 100%;
+  min-height: 300px;
 }
 
 .portfolio .portfolio-container .portfolio-item .content-holder {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  position: relative;
+  top: auto;
+  left: auto;
+  -webkit-transform: none;
+      -ms-transform: none;
+          transform: none;
   width: 100%;
   height: 100%;
-  background: rgba(248, 92, 112, 0.8);
+  background: #f8f8f8;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -11244,10 +11246,10 @@ p {
       -ms-flex-pack: center;
           justify-content: center;
   text-align: center;
-  padding: 0 20px;
-  color: #fff;
-  opacity: 0;
-  visibility: hidden;
+  padding: 20px;
+  color: #333;
+  opacity: 1;
+  visibility: visible;
   transition: 0.5s;
   -webkit-transition: 0.5s;
 }
@@ -11255,12 +11257,13 @@ p {
 .portfolio .portfolio-container .portfolio-item .content-holder .title {
   font-size: 22px;
   font-weight: 600;
+  color: #333;
 }
 
 .portfolio .portfolio-container .portfolio-item .content-holder .subtitle {
   font-weight: 500;
   opacity: 1;
-  color: #fff;
+  color: #666;
 }
 
 .portfolio .portfolio-container .portfolio-item:hover .content-holder {
